.provarCaches/00D5f000005vwGkEAI/objects/rstk__solaud__c.object
<CustomObject>
    <description>solaud__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_application__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Application</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_comment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_discpct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Discount Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>solauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_duedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_freightamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_handlingamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Handling Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_order__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_packageamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packaging Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_price__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_prod__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_qtyorder__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Ordered</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_rev__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_txntype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>solauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solaud_ustat__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>User Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Line Audit</label>
    <listViews>
        <fullName>rstk__SO_Line_Audit</fullName>
        <columns>NAME</columns>
        <columns>rstk__solaud_div__c</columns>
        <columns>rstk__solaud_order__c</columns>
        <columns>rstk__solaud_line__c</columns>
        <columns>rstk__solaud_txntype__c</columns>
        <columns>rstk__solaud_prod__c</columns>
        <columns>rstk__solaud_qtyorder__c</columns>
        <columns>rstk__solaud_price__c</columns>
        <columns>rstk__solaud_duedate__c</columns>
        <columns>rstk__solaud_date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__solaud_comment__c</columns>
        <columns>rstk__solaud_application__c</columns>
        <filterScope>Everything</filterScope>
        <label>SO Line Audit</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SOLAUD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Line Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>